01-EC2-Basics/security-group.tf
resource "aws_security_group" "web_sg" {

  name        = "terraform-web-sg"
  description = "Allow SSH and HTTP access"

  vpc_id = data.aws_vpc.default.id

  ingress {
    description = "Allow SSH"

    from_port = 22
    to_port   = 22

    protocol = "tcp"

    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "Allow HTTP"

    from_port = 80
    to_port   = 80

    protocol = "tcp"

    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {

    from_port = 0
    to_port   = 0

    protocol = "-1"

    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name        = "terraform-web-sg"
    Environment = "Development"
    Project     = "Terraform-AWS-DevOps"
  }
}
